--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Cookpedia</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="https://png.pngtree.com/png-vector/20230622/ourmid/pngtree-cooking-logo-vector-png-image_7305522.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
